changes made from theia lab environment

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </table>
     
     
-                <button id="compute" onclick="compute()">Calculate Interest</button> <br>
+                <button id="compute" onclick="compute()">Compute Interest</button> <br>
                 <span id="result">
                 </span>
             </div>
