--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>Web App – Simple Interest Calculator</title>
+        <title>Web App-Simple Interest Calculator</title>
         <script src="script.js"></script>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -21,7 +21,7 @@
                             <td class="labels">Interest Rate </td>
                             <td>
                                 <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" name="rate" onchange="SliderValue()"> 
-                                <span id="rate_display">10.25%</span>
+                                <span id="rate_display">10.25</span>%
                             </td>
                         </tr>
                         <tr>
